# computersystems_assignment_1

./: .gitignore  CMakeLists.txt  filters.c  filters.h  main.c  sensor.c  sensor.h
